--- a/src/machine_learning/ce_v1/model-training-nn.ipynb
+++ b/src/machine_learning/ce_v1/model-training-nn.ipynb
@@ -169,7 +169,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Model variant1"
+    "# Variant: binary target"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Model 1a: functional, bidirectional-LSTM"
    ],
    "metadata": {
     "collapsed": false
@@ -217,8 +226,8 @@
     "x = layers.Bidirectional(layers.LSTM(64))(x)\n",
     "# Add a classifier\n",
     "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
-    "model = keras.Model(inputs, outputs)\n",
-    "model.summary()"
+    "model1 = keras.Model(inputs, outputs)\n",
+    "model1.summary()"
    ],
    "metadata": {
     "collapsed": false,
@@ -254,8 +263,8 @@
     }
    ],
    "source": [
-    "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
-    "model.fit(X_train, y_train, batch_size=32, epochs=3, validation_data=(X_test, y_test))"
+    "model1.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+    "model1.fit(X_train, y_train, batch_size=32, epochs=3, validation_data=(X_test, y_test))"
    ],
    "metadata": {
     "collapsed": false,
@@ -266,16 +275,184 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Model 1b: sequential-LSTM"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Embedding, LSTM"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-06T07:26:36.272757300Z",
-     "start_time": "2024-10-06T07:26:36.091376800Z"
+     "end_time": "2024-10-08T17:21:45.902909800Z",
+     "start_time": "2024-10-08T17:21:45.876909800Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "EMBEDDING_SIZE = 128\n",
+    "HIDDEN_LAYER_SIZE = 128\n",
+    "BATCH_SIZE = 32\n",
+    "NUM_EPOCHS = 15\n",
+    "\n",
+    "MAX_FEATURES = 20000\n",
+    "MAX_SENTENCE_LENGTH = 62"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-08T17:22:44.842685900Z",
+     "start_time": "2024-10-08T17:22:44.811523500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding_3 (Embedding)     (None, 62, 128)           2560000   \n",
+      "                                                                 \n",
+      " lstm_4 (LSTM)               (None, 128)               131584    \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 129       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2,691,713\n",
+      "Trainable params: 2,691,713\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model2 = Sequential()\n",
+    "\n",
+    "model2.add(Embedding(MAX_FEATURES, EMBEDDING_SIZE, input_length=MAX_SENTENCE_LENGTH))\n",
+    "model2.add(LSTM(HIDDEN_LAYER_SIZE, dropout=0.2, recurrent_dropout=0.2))\n",
+    "model2.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model2.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-08T17:22:45.332821700Z",
+     "start_time": "2024-10-08T17:22:45.077671400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "1276/1276 [==============================] - 234s 180ms/step - loss: 0.3823 - accuracy: 0.8296 - val_loss: 0.2871 - val_accuracy: 0.8799\n",
+      "Epoch 2/3\n",
+      "1276/1276 [==============================] - 230s 180ms/step - loss: 0.1864 - accuracy: 0.9241 - val_loss: 0.2010 - val_accuracy: 0.9200\n",
+      "Epoch 3/3\n",
+      "1276/1276 [==============================] - 229s 179ms/step - loss: 0.1107 - accuracy: 0.9579 - val_loss: 0.1896 - val_accuracy: 0.9281\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<keras.callbacks.History at 0x2882b18e3e0>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.compile(loss='binary_crossentropy',\n",
+    "              optimizer='adam',\n",
+    "              metrics=['accuracy'])\n",
+    "model2.fit(X_train, y_train, batch_size=32, epochs=3, validation_data=(X_test, y_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-08T17:34:19.399229300Z",
+     "start_time": "2024-10-08T17:22:46.712629200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Variant: multi-class target"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Model 2a: functional, bidirectional-LSTM"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "# todo"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-08T17:37:32.618726200Z",
+     "start_time": "2024-10-08T17:37:32.590304300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Model 2b: sequential-LSTM"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# todo"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
