--- a/src/machine_learning/nasiba/data-prep.ipynb
+++ b/src/machine_learning/nasiba/data-prep.ipynb
@@ -3702,7 +3702,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "filepath_name = os.path.abspath(os.path.join(current_dir, '../../../data/twitter_hate-speech/train_cleaned.csv'))\n",
+    "filepath_name = os.path.abspath(os.path.join(current_dir, 'data/train_cleaned_preprocessed.csv'))\n",
     "# directory_path = Path(filepath_name).parent  \n",
     "# directory_path.mkdir(parents=True, exist_ok=True)\n",
     "df_cleaned.to_csv(filepath_name)\n"
