--- a/src/1. Explorative Analysis & Preprocessing/elena/balance_data_v1.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/elena/balance_data_v1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,15 @@
     "from imblearn.combine import SMOTEENN\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from collections import Counter\n"
+    "from collections import Counter\n",
+    "from imblearn.combine import SMOTETomek\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,13 +75,14 @@
     "# extracting tweet-column \n",
     "\n",
     "tweets = df_train['tweet']\n",
+    "y_train = df_train['label']\n",
     "\n",
     "print(tweets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,25 +104,25 @@
     }
    ],
    "source": [
-    "# vectorization of tweet column \n",
+    "# # vectorization of tweet column \n",
     "\n",
-    "count_vectorizer = CountVectorizer()\n",
+    "# count_vectorizer = CountVectorizer()\n",
     "\n",
-    "count_matrix = count_vectorizer.fit_transform(tweets)\n",
+    "# count_matrix = count_vectorizer.fit_transform(tweets)\n",
     "\n",
-    "count_array = count_matrix.toarray()\n",
+    "# count_array = count_matrix.toarray()\n",
     "\n",
-    "feature_names = count_vectorizer.get_feature_names_out()\n",
+    "# feature_names = count_vectorizer.get_feature_names_out()\n",
     "\n",
-    "# Output the results\n",
-    "print(\"Count Vectorization:\\n\")\n",
-    "print(\"Feature Names:\", feature_names)\n",
-    "print(\"Count Matrix:\\n\", count_array)"
+    "# # Output the results\n",
+    "# print(\"Count Vectorization:\\n\")\n",
+    "# print(\"Feature Names:\", feature_names)\n",
+    "# print(\"Count Matrix:\\n\", count_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +140,8 @@
       " ...\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      "Original training dataset shape: Counter({0: 29720, 1: 2242})\n"
      ]
     }
    ],
@@ -155,7 +160,9 @@
     "\n",
     "print(\"\\nTF-IDF Vectorization:\\n\")\n",
     "print(\"Feature Names:\", tfidf_feature_names)\n",
-    "print(\"TF-IDF Matrix:\\n\", tfidf_array)"
+    "print(\"TF-IDF Matrix:\\n\", tfidf_array)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,8 +193,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manual Hybrid Sampling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +213,7 @@
     }
    ],
    "source": [
-    "# Oversmapling the minority class & undersampling the majority class\n",
+    "#  Oversmapling the minority class & undersampling the majority class\n",
     "\n",
     "smote = SMOTE(sampling_strategy=0.5, random_state=42)  \n",
     "undersample = RandomUnderSampler(sampling_strategy=0.8, random_state=42)  \n",
@@ -211,9 +225,102 @@
     "print(f\"Resampled training dataset shape: {Counter(y_train_combined)}\")\n",
     "\n",
     "# Converting back to DataFrame \n",
-    "df_resampled = pd.DataFrame(X_train_combined.toarray(), columns=vectorizer.get_feature_names_out())\n",
-    "df_resampled['label'] = y_train_combined\n",
-    "\n"
+    "df_resampled_manually = pd.DataFrame(X_train_combined.toarray(), columns=tfidf_feature_names)\n",
+    "df_resampled_manually['label'] = y_train_combined\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SMOTETomek Hybrid-Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original dataset shape: (31962, 41392) 0        0\n",
+      "1        0\n",
+      "2        0\n",
+      "3        0\n",
+      "4        0\n",
+      "        ..\n",
+      "31957    0\n",
+      "31958    0\n",
+      "31959    0\n",
+      "31960    1\n",
+      "31961    0\n",
+      "Name: label, Length: 31962, dtype: int64\n",
+      "SMOTEENN resampled shape: (59440, 41392) (59440,)\n",
+      "Resampled training dataset shape: Counter({0: 29720, 1: 29720})\n"
+     ]
+    }
+   ],
+   "source": [
+    "smote_tomek = SMOTETomek(random_state=42)\n",
+    "X_resampled_smt, y_resampled_smt = smote_tomek.fit_resample(tfidf_matrix, df_train['label'] )\n",
+    "\n",
+    "# Checking resampled dataset shapes\n",
+    "print(\"Original dataset shape:\", tfidf_matrix.shape, y_train)\n",
+    "print(\"SMOTEENN resampled shape:\", X_resampled_smt.shape, y_resampled_smt.shape)\n",
+    "print(f\"Resampled training dataset shape: {Counter(y_resampled_smt)}\")\n",
+    "\n",
+    "# Converting back to DataFrame \n",
+    "X_resampled_SMOTEEN_df = pd.DataFrame(X_resampled_smt.toarray(), columns=tfidf_feature_names)\n",
+    "X_resampled_SMOTEEN_df['label'] = y_resampled_smt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SMOTEEN Hyprid-Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original dataset shape: (31962, 41392) 0        0\n",
+      "1        0\n",
+      "2        0\n",
+      "3        0\n",
+      "4        0\n",
+      "        ..\n",
+      "31957    0\n",
+      "31958    0\n",
+      "31959    0\n",
+      "31960    1\n",
+      "31961    0\n",
+      "Name: label, Length: 31962, dtype: int64\n",
+      "SMOTEENN resampled shape: (40696, 41392) (40696,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply SMOTEENN\n",
+    "smote_enn = SMOTEENN(random_state=42)\n",
+    "X_resampled_enn, y_resampled_enn = smote_enn.fit_resample(tfidf_matrix, df_train['label'] )\n",
+    "\n",
+    "# Checking resampled dataset shapes\n",
+    "print(\"Original dataset shape:\", tfidf_matrix.shape, y_train)\n",
+    "print(\"SMOTEENN resampled shape:\", X_resampled_enn.shape, y_resampled_enn.shape)\n",
+    "print(f\"Resampled training dataset shape: {Counter(y_resampled_enn)}\")\n",
+    "\n",
+    "# Converting back to DataFrame \n",
+    "X_resampled_SMOTEEN_df = pd.DataFrame(X_resampled_enn.toarray(), columns=tfidf_feature_names)\n",
+    "X_resampled_SMOTEEN_df['label'] = y_resampled_enn"
    ]
   }
  ],
