Fehler bei Bayes-Modell korrigiert

--- a/src/1a. Resampling Methods/chris/data-prep-imbalanced-data.ipynb
+++ b/src/1a. Resampling Methods/chris/data-prep-imbalanced-data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -36,13 +36,14 @@
     "from sklearn.svm import LinearSVC\n",
     "\n",
     "from catboost import CatBoostClassifier\n",
-    "from lightgbm import LGBMClassifier"
+    "from lightgbm import LGBMClassifier\n",
+    "from sklearn.naive_bayes import MultinomialNB"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-14T19:08:54.993843100Z",
-     "start_time": "2024-11-14T19:08:50.824969900Z"
+     "end_time": "2024-11-14T20:32:50.468924500Z",
+     "start_time": "2024-11-14T20:32:50.368649300Z"
     }
    }
   },
@@ -4218,104 +4219,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB"
+    "bayes = MultinomialNB()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-14T19:13:24.060156400Z",
-     "start_time": "2024-11-14T19:13:24.029816700Z"
+     "end_time": "2024-11-14T20:32:53.519710200Z",
+     "start_time": "2024-11-14T20:32:53.457196400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "outputs": [],
-   "source": [
-    "bayes = GaussianNB()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-14T19:13:24.078318Z",
-     "start_time": "2024-11-14T19:13:24.050093200Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Starting model fitting.\n",
-      "1/12 Fitting:  GaussianNB BASE started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "2/12 Fitting:  GaussianNB CLEAN started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "3/12 Fitting:  GaussianNB SMOTE-base started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "4/12 Fitting:  GaussianNB SMOTE-clean started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "5/12 Fitting:  GaussianNB BorderlineSMOTE-base started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "6/12 Fitting:  GaussianNB BorderlineSMOTE-clean started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "7/12 Fitting:  GaussianNB ADASYN-base started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "8/12 Fitting:  GaussianNB ADASYN-clean started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "9/12 Fitting:  GaussianNB NearMiss-base started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "10/12 Fitting:  GaussianNB NearMiss-clean started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "11/12 Fitting:  GaussianNB TomekLink-base started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
-      "12/12 Fitting:  GaussianNB TomekLink-clean started...\n",
-      "Fitting:  GaussianNB finished. Elapsed time:  0 Seconds\n",
+      "1/12 Fitting:  MultinomialNB BASE started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "2/12 Fitting:  MultinomialNB CLEAN started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "3/12 Fitting:  MultinomialNB SMOTE-base started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "4/12 Fitting:  MultinomialNB SMOTE-clean started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "5/12 Fitting:  MultinomialNB BorderlineSMOTE-base started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "6/12 Fitting:  MultinomialNB BorderlineSMOTE-clean started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "7/12 Fitting:  MultinomialNB ADASYN-base started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "8/12 Fitting:  MultinomialNB ADASYN-clean started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "9/12 Fitting:  MultinomialNB NearMiss-base started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "10/12 Fitting:  MultinomialNB NearMiss-clean started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "11/12 Fitting:  MultinomialNB TomekLink-base started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
+      "12/12 Fitting:  MultinomialNB TomekLink-clean started...\n",
+      "Fitting:  MultinomialNB finished. Elapsed time:  0 Seconds\n",
       "Model fitting finished.\n"
      ]
     }
    ],
    "source": [
-    "fit_model(svc, \"GaussianNB\")"
+    "fit_model(bayes, \"MultinomialNB\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-14T19:13:25.878191300Z",
-     "start_time": "2024-11-14T19:13:24.070276500Z"
+     "end_time": "2024-11-14T20:32:54.501391800Z",
+     "start_time": "2024-11-14T20:32:53.804653800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "outputs": [
     {
      "data": {
-      "text/plain": "         model                variant  train_acc  train_prec  train_rec  \\\n78  GaussianNB   BorderlineSMOTE base   0.989695    0.990841   0.988527   \n76  GaussianNB             SMOTE base   0.988319    0.978482   0.998598   \n74  GaussianNB                   base   0.969619    0.692270   0.997871   \n80  GaussianNB            ADASYN base   0.988253    0.977360   0.999417   \n84  GaussianNB         TomekLink base   0.968844    0.679012   0.997634   \n85  GaussianNB        TomekLink clean   0.968844    0.679012   0.997634   \n75  GaussianNB                  clean   0.967655    0.670201   0.996845   \n77  GaussianNB            SMOTE clean   0.983274    0.970552   0.996793   \n79  GaussianNB  BorderlineSMOTE clean   0.983440    0.970815   0.996848   \n81  GaussianNB           ADASYN clean   0.983289    0.970579   0.997320   \n83  GaussianNB         NearMiss clean   0.952615    0.995012   0.944006   \n82  GaussianNB          NearMiss base   0.967378    0.997799   0.965224   \n\n    train_f1  test_acc  test_prec  test_rec   test_f1  \n78  0.989683  0.946608   0.611205  0.596026  0.603521  \n76  0.988438  0.934417   0.513973  0.700331  0.592852  \n74  0.817442  0.930128   0.491803  0.745033  0.592495  \n80  0.988265  0.933175   0.507126  0.706954  0.590595  \n84  0.808049  0.917661   0.420455  0.681400  0.520028  \n85  0.808049  0.917661   0.420455  0.681400  0.520028  \n75  0.801522  0.918143   0.421839  0.675875  0.519462  \n77  0.983497  0.911031   0.396166  0.685083  0.502024  \n79  0.983659  0.910910   0.394850  0.677716  0.498983  \n81  0.983768  0.908620   0.387435  0.681400  0.493992  \n83  0.968839  0.563593   0.117764  0.872928  0.207531  \n82  0.981241  0.386274   0.093250  0.917219  0.169290  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model</th>\n      <th>variant</th>\n      <th>train_acc</th>\n      <th>train_prec</th>\n      <th>train_rec</th>\n      <th>train_f1</th>\n      <th>test_acc</th>\n      <th>test_prec</th>\n      <th>test_rec</th>\n      <th>test_f1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>78</th>\n      <td>GaussianNB</td>\n      <td>BorderlineSMOTE base</td>\n      <td>0.989695</td>\n      <td>0.990841</td>\n      <td>0.988527</td>\n      <td>0.989683</td>\n      <td>0.946608</td>\n      <td>0.611205</td>\n      <td>0.596026</td>\n      <td>0.603521</td>\n    </tr>\n    <tr>\n      <th>76</th>\n      <td>GaussianNB</td>\n      <td>SMOTE base</td>\n      <td>0.988319</td>\n      <td>0.978482</td>\n      <td>0.998598</td>\n      <td>0.988438</td>\n      <td>0.934417</td>\n      <td>0.513973</td>\n      <td>0.700331</td>\n      <td>0.592852</td>\n    </tr>\n    <tr>\n      <th>74</th>\n      <td>GaussianNB</td>\n      <td>base</td>\n      <td>0.969619</td>\n      <td>0.692270</td>\n      <td>0.997871</td>\n      <td>0.817442</td>\n      <td>0.930128</td>\n      <td>0.491803</td>\n      <td>0.745033</td>\n      <td>0.592495</td>\n    </tr>\n    <tr>\n      <th>80</th>\n      <td>GaussianNB</td>\n      <td>ADASYN base</td>\n      <td>0.988253</td>\n      <td>0.977360</td>\n      <td>0.999417</td>\n      <td>0.988265</td>\n      <td>0.933175</td>\n      <td>0.507126</td>\n      <td>0.706954</td>\n      <td>0.590595</td>\n    </tr>\n    <tr>\n      <th>84</th>\n      <td>GaussianNB</td>\n      <td>TomekLink base</td>\n      <td>0.968844</td>\n      <td>0.679012</td>\n      <td>0.997634</td>\n      <td>0.808049</td>\n      <td>0.917661</td>\n      <td>0.420455</td>\n      <td>0.681400</td>\n      <td>0.520028</td>\n    </tr>\n    <tr>\n      <th>85</th>\n      <td>GaussianNB</td>\n      <td>TomekLink clean</td>\n      <td>0.968844</td>\n      <td>0.679012</td>\n      <td>0.997634</td>\n      <td>0.808049</td>\n      <td>0.917661</td>\n      <td>0.420455</td>\n      <td>0.681400</td>\n      <td>0.520028</td>\n    </tr>\n    <tr>\n      <th>75</th>\n      <td>GaussianNB</td>\n      <td>clean</td>\n      <td>0.967655</td>\n      <td>0.670201</td>\n      <td>0.996845</td>\n      <td>0.801522</td>\n      <td>0.918143</td>\n      <td>0.421839</td>\n      <td>0.675875</td>\n      <td>0.519462</td>\n    </tr>\n    <tr>\n      <th>77</th>\n      <td>GaussianNB</td>\n      <td>SMOTE clean</td>\n      <td>0.983274</td>\n      <td>0.970552</td>\n      <td>0.996793</td>\n      <td>0.983497</td>\n      <td>0.911031</td>\n      <td>0.396166</td>\n      <td>0.685083</td>\n      <td>0.502024</td>\n    </tr>\n    <tr>\n      <th>79</th>\n      <td>GaussianNB</td>\n      <td>BorderlineSMOTE clean</td>\n      <td>0.983440</td>\n      <td>0.970815</td>\n      <td>0.996848</td>\n      <td>0.983659</td>\n      <td>0.910910</td>\n      <td>0.394850</td>\n      <td>0.677716</td>\n      <td>0.498983</td>\n    </tr>\n    <tr>\n      <th>81</th>\n      <td>GaussianNB</td>\n      <td>ADASYN clean</td>\n      <td>0.983289</td>\n      <td>0.970579</td>\n      <td>0.997320</td>\n      <td>0.983768</td>\n      <td>0.908620</td>\n      <td>0.387435</td>\n      <td>0.681400</td>\n      <td>0.493992</td>\n    </tr>\n    <tr>\n      <th>83</th>\n      <td>GaussianNB</td>\n      <td>NearMiss clean</td>\n      <td>0.952615</td>\n      <td>0.995012</td>\n      <td>0.944006</td>\n      <td>0.968839</td>\n      <td>0.563593</td>\n      <td>0.117764</td>\n      <td>0.872928</td>\n      <td>0.207531</td>\n    </tr>\n    <tr>\n      <th>82</th>\n      <td>GaussianNB</td>\n      <td>NearMiss base</td>\n      <td>0.967378</td>\n      <td>0.997799</td>\n      <td>0.965224</td>\n      <td>0.981241</td>\n      <td>0.386274</td>\n      <td>0.093250</td>\n      <td>0.917219</td>\n      <td>0.169290</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "            model                variant  train_acc  train_prec  train_rec  \\\n90  MultinomialNB   BorderlineSMOTE base   0.965268    0.956919   0.974406   \n88  MultinomialNB             SMOTE base   0.944424    0.916023   0.978559   \n92  MultinomialNB            ADASYN base   0.942682    0.910598   0.980451   \n89  MultinomialNB            SMOTE clean   0.944626    0.919243   0.974898   \n91  MultinomialNB  BorderlineSMOTE clean   0.947141    0.920803   0.978436   \n93  MultinomialNB           ADASYN clean   0.944505    0.915654   0.981078   \n86  MultinomialNB                   base   0.948043    0.969188   0.245564   \n87  MultinomialNB                  clean   0.952361    0.965054   0.283123   \n96  MultinomialNB         TomekLink base   0.952462    0.970509   0.285489   \n97  MultinomialNB        TomekLink clean   0.952462    0.970509   0.285489   \n94  MultinomialNB          NearMiss base   0.883940    0.883940   1.000000   \n95  MultinomialNB         NearMiss clean   0.792000    0.789900   0.999211   \n\n    train_f1  test_acc  test_prec  test_rec   test_f1  \n90  0.965583  0.928209   0.480392  0.649007  0.552113  \n88  0.946259  0.895474   0.379671  0.841060  0.523172  \n92  0.944235  0.891184   0.369942  0.847682  0.515091  \n89  0.946253  0.889090   0.351223  0.819521  0.491713  \n91  0.948745  0.888366   0.348617  0.812155  0.487832  \n93  0.947238  0.877878   0.327460  0.821363  0.468241  \n86  0.391846  0.944576   0.931298  0.201987  0.331973  \n87  0.437805  0.946353   0.945455  0.191529  0.318530  \n96  0.441194  0.946112   0.928571  0.191529  0.317557  \n97  0.441194  0.946112   0.928571  0.191529  0.317557  \n94  0.938395  0.068179   0.068179  1.000000  0.127655  \n95  0.882312  0.079687   0.066406  1.000000  0.124541  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model</th>\n      <th>variant</th>\n      <th>train_acc</th>\n      <th>train_prec</th>\n      <th>train_rec</th>\n      <th>train_f1</th>\n      <th>test_acc</th>\n      <th>test_prec</th>\n      <th>test_rec</th>\n      <th>test_f1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>90</th>\n      <td>MultinomialNB</td>\n      <td>BorderlineSMOTE base</td>\n      <td>0.965268</td>\n      <td>0.956919</td>\n      <td>0.974406</td>\n      <td>0.965583</td>\n      <td>0.928209</td>\n      <td>0.480392</td>\n      <td>0.649007</td>\n      <td>0.552113</td>\n    </tr>\n    <tr>\n      <th>88</th>\n      <td>MultinomialNB</td>\n      <td>SMOTE base</td>\n      <td>0.944424</td>\n      <td>0.916023</td>\n      <td>0.978559</td>\n      <td>0.946259</td>\n      <td>0.895474</td>\n      <td>0.379671</td>\n      <td>0.841060</td>\n      <td>0.523172</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>MultinomialNB</td>\n      <td>ADASYN base</td>\n      <td>0.942682</td>\n      <td>0.910598</td>\n      <td>0.980451</td>\n      <td>0.944235</td>\n      <td>0.891184</td>\n      <td>0.369942</td>\n      <td>0.847682</td>\n      <td>0.515091</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>MultinomialNB</td>\n      <td>SMOTE clean</td>\n      <td>0.944626</td>\n      <td>0.919243</td>\n      <td>0.974898</td>\n      <td>0.946253</td>\n      <td>0.889090</td>\n      <td>0.351223</td>\n      <td>0.819521</td>\n      <td>0.491713</td>\n    </tr>\n    <tr>\n      <th>91</th>\n      <td>MultinomialNB</td>\n      <td>BorderlineSMOTE clean</td>\n      <td>0.947141</td>\n      <td>0.920803</td>\n      <td>0.978436</td>\n      <td>0.948745</td>\n      <td>0.888366</td>\n      <td>0.348617</td>\n      <td>0.812155</td>\n      <td>0.487832</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>MultinomialNB</td>\n      <td>ADASYN clean</td>\n      <td>0.944505</td>\n      <td>0.915654</td>\n      <td>0.981078</td>\n      <td>0.947238</td>\n      <td>0.877878</td>\n      <td>0.327460</td>\n      <td>0.821363</td>\n      <td>0.468241</td>\n    </tr>\n    <tr>\n      <th>86</th>\n      <td>MultinomialNB</td>\n      <td>base</td>\n      <td>0.948043</td>\n      <td>0.969188</td>\n      <td>0.245564</td>\n      <td>0.391846</td>\n      <td>0.944576</td>\n      <td>0.931298</td>\n      <td>0.201987</td>\n      <td>0.331973</td>\n    </tr>\n    <tr>\n      <th>87</th>\n      <td>MultinomialNB</td>\n      <td>clean</td>\n      <td>0.952361</td>\n      <td>0.965054</td>\n      <td>0.283123</td>\n      <td>0.437805</td>\n      <td>0.946353</td>\n      <td>0.945455</td>\n      <td>0.191529</td>\n      <td>0.318530</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>MultinomialNB</td>\n      <td>TomekLink base</td>\n      <td>0.952462</td>\n      <td>0.970509</td>\n      <td>0.285489</td>\n      <td>0.441194</td>\n      <td>0.946112</td>\n      <td>0.928571</td>\n      <td>0.191529</td>\n      <td>0.317557</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>MultinomialNB</td>\n      <td>TomekLink clean</td>\n      <td>0.952462</td>\n      <td>0.970509</td>\n      <td>0.285489</td>\n      <td>0.441194</td>\n      <td>0.946112</td>\n      <td>0.928571</td>\n      <td>0.191529</td>\n      <td>0.317557</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>MultinomialNB</td>\n      <td>NearMiss base</td>\n      <td>0.883940</td>\n      <td>0.883940</td>\n      <td>1.000000</td>\n      <td>0.938395</td>\n      <td>0.068179</td>\n      <td>0.068179</td>\n      <td>1.000000</td>\n      <td>0.127655</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>MultinomialNB</td>\n      <td>NearMiss clean</td>\n      <td>0.792000</td>\n      <td>0.789900</td>\n      <td>0.999211</td>\n      <td>0.882312</td>\n      <td>0.079687</td>\n      <td>0.066406</td>\n      <td>1.000000</td>\n      <td>0.124541</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 89,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluation[evaluation.model == \"GaussianNB\"].sort_values(by=[\"test_f1\"], ascending=False)"
+    "evaluation[evaluation.model == \"MultinomialNB\"].sort_values(by=[\"test_f1\"], ascending=False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-14T19:13:25.896247700Z",
-     "start_time": "2024-11-14T19:13:25.878191300Z"
+     "end_time": "2024-11-14T20:32:54.691048200Z",
+     "start_time": "2024-11-14T20:32:54.582081200Z"
     }
    }
   },
